# ChangeLog for www-apache/mod_jk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_jk/ChangeLog,v 1.54 2009/02/16 23:33:32 betelgeuse Exp $

  16 Feb 2009; Petteri Räty <betelgeuse@gentoo.org> files/88_mod_jk.conf,
  files/new/88_mod_jk.conf:
  Fix typo in comments. Fixes bug #259226.

  10 Dec 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
  Add weisso as proxy maintainer.

*mod_jk-1.2.27 (06 Dec 2008)

  06 Dec 2008; Petteri Räty <betelgeuse@gentoo.org> +mod_jk-1.2.27.ebuild:
  Version bump. Thanks to Mike Weissman <mike@weisso.com>. Fixes bug
  #245597.

  06 Dec 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
  Remove wltjr as he retired ages ago.

  25 Oct 2008; nixnut <nixnut@gentoo.org> mod_jk-1.2.26-r1.ebuild:
  Stable on ppc wrt bug 242726

  19 Oct 2008; Markus Meier <maekke@gentoo.org> mod_jk-1.2.26-r1.ebuild:
  amd64/x86 stable, bug #242726

  05 Feb 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  -mod_jk-1.2.21-r2.ebuild, -mod_jk-1.2.22.ebuild, -mod_jk-1.2.23.ebuild:
  Removed older versions per bug #206140

  31 Jan 2008; Benedikt Böhm <hollow@gentoo.org> mod_jk-1.2.21-r2.ebuild,
  mod_jk-1.2.22.ebuild, mod_jk-1.2.23.ebuild, mod_jk-1.2.25.ebuild,
  mod_jk-1.2.26-r1.ebuild:
  fix depend.apache usage wrt #208033

*mod_jk-1.2.26-r1 (16 Jan 2008)

  16 Jan 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  +files/new/88_mod_jk.conf, +files/new/jk-workers.properties,
  -mod_jk-1.2.26.ebuild, +mod_jk-1.2.26-r1.ebuild:
  Updated installed files for >=1.2.26, put them in dir called new, verses
  versioning the dir name. Address new module conf options per bug #204815

  11 Jan 2008; William L. Thomson Jr. <wltjr@gentoo.org>
  mod_jk-1.2.25.ebuild:
  amd64 stable, bug #204098.

  04 Jan 2008; nixnut <nixnut@gentoo.org> mod_jk-1.2.25.ebuild:
  Stable on ppc wrt bug 204098

  03 Jan 2008; Markus Meier <maekke@gentoo.org> mod_jk-1.2.25.ebuild:
  x86 stable, bug #204098
