@@ -1,6 +1,11 @@
 # ChangeLog for www-apache/mod_jk
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_jk/ChangeLog,v 1.54 2009/02/16 23:33:32 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_jk/ChangeLog,v 1.55 2009/04/05 19:55:20 betelgeuse Exp $
+
+*mod_jk-1.2.28 (05 Apr 2009)
+
+  05 Apr 2009; Petteri Räty <betelgeuse@gentoo.org> +mod_jk-1.2.28.ebuild:
+  Version bump. Fixes bug #264035.
 
   16 Feb 2009; Petteri Räty <betelgeuse@gentoo.org> files/88_mod_jk.conf,
   files/new/88_mod_jk.conf:
